fixed : [carousel module] Adapt image to carousel height broken #743 added : [carousel module] new image layout option so that images fill space and are centered without being stretched. fixes #743

--- a/assets/front/scss/modules/_img_slider.scss
+++ b/assets/front/scss/modules/_img_slider.scss
@@ -43,6 +43,19 @@
       &[data-sek-image-layout="height-100"] {
         .sek-carousel-img {
           height: 100%;
+          width: auto;
+          overflow: hidden;
+          img {
+            width: auto;
+            height: 100%;
+            max-width: none;
+          }
+        }
+      }
+      // Sept 2020, for https://github.com/presscustomizr/nimble-builder/issues/743
+      &[data-sek-image-layout="cover"] {
+        .sek-carousel-img {
+          height: 100%;
           width: 100%;
           overflow: hidden;
           display: flex;
